# main

./: .gitignore
AMDiS_DEC/: CMakeLists.txt  ausgabe.txt  correctorQueue35X.sh  correctorQueue3X.sh  correctorQueue43X.sh  correctorQueue44X.sh  correctorQueue4X.sh  correctorQueue5X.sh  correctorQueue7X.sh  curvSphere  defSphere  dirVecPhi  gaussMean  geoPotEllipsoid  gradSphere  heatSphere  heine51b  heine51bGaussMean  heine51bWeingarten  heine51c  heine51cWeingarten  improveMesh  jacobianSphere  laplaceSphere  laplaceTorus  meshCorrector  meshCorrectorNonics  meshStatsSphereDivBy4.csv.save  out.txt  platteSphere  platteTorus  sphereWeingarten  torusGaussMean  weingarten  weingartenTorus
AMDiS_DEC/init/: curvSphere.dat.3d  defSphere.dat.3d  gaussMean.dat.3d  gradSphere.dat.3d  gradTorus.dat.3d  heatSphere.dat.3d  heine51b.dat.3d  heine51c.dat.3d  improveMesh.dat.3d  meanCurvTorus.dat.3d  meshCorrector.dat.3d  meshCorrector2.dat.3d  meshCorrector3.dat.3d  platteSphere.dat.3d  platteTorus.dat.3d  sphere.dat.3d  torus.dat.3d  weingarten.dat.3d  weingartenTorus.dat.3d
AMDiS_DEC/macro/: badheine2500.3d  dS_00.3d  dS_01.3d  dS_02.3d  dS_03.3d  dS_04.3d  dS_05.3d  dS_06.3d  dS_07.3d  dS_08.3d  dS_09.3d  dS_10.3d  heine51C_1k_improved.3d  heine51b_10k_improved.3d  heine51b_1k_improved.3d  heine51b_25k_improved.3d  heine51b_2k_improved.3d  heine51b_5k_improved.3d  heine51c_10k_improved.3d  heine51c_25k_improved.3d  heine51c_2k_improved.3d  heine51c_5k.3d  heine51c_5k_improved.3d  heine51c_5k_k000.3d  heine51c_5k_k000.3d_phi.vtu  heine51c_5k_k025.3d  heine51c_5k_k025.3d_phi.vtu  heine51c_5k_k05.3d  heine51c_5k_k05.3d_phi.vtu  heine51c_5k_k050.3d  heine51c_5k_k050.3d_phi.vtu  heine51c_5k_k075.3d  heine51c_5k_k075.3d_phi.vtu  meshOut1000.3d  meshOut10000.3d  meshOut10k2000.3d  sphereDivBy4.3d  sphereIko10k.3d  sphereIko1k.3d  sphereIko25k.3d  (+10 more)
AMDiS_DEC/python/: evalCSV.py  freqEvalCSV.sh
AMDiS_DEC/src/: GeoPotEllipsoid.cc  correctMesh.cc  correctMeshNonics.cc  defSphere.cc  dirVecCosPhi.cc  dirVecPhi.cc  gaussMean.cc  heine51b.cc  heine51bGaussMean.cc  heine51bWeingarten.cc  heine51c.cc  heine51cWeingarten.cc  improveMesh.cc  sphereCurv.cc  sphereGrad.cc  sphereHeat.cc  sphereJacobian.cc  sphereLaplaceDEC.cc  spherePlatteDEC.cc  sphereWeightedLaplace.cc  sphereWeingarten.cc  torusGaussMean.cc  torusGrad.cc  torusLaplaceDEC.cc  torusMeanCurvature.cc  torusPlatteDEC.cc  torusWeingarten.cc  torusWeingartenSimple.cc  vorticitySphere.cc  weingarten.cc
AMDiS_DEC/states/: GradSphere.pvsm  GradSphere_Home.pvsm  GradTorus.pvsm  LX_onTorus_Error.pvsm  LX_onTorus_Home.pvsm  SphereCurv_home.pvsm  bunnyGaussMean.pvsm  bunnyPrincipal.pvsm  circum.pvsm  circumHome.pvsm  defSphere.pvsm  dirVecPhi.pvsm  divby4_HOME.pvsm  heine51b_Home.pvsm  heine51c.pvsm  heine51c_Home.pvsm  heineBCurv.pvsm  heineBCurv_Home.pvsm  heineB_meshCompare__home.pvsm  heineCCurv_Home.pvsm  horseGaussMean.pvsm  laplaceSignedErrorHome.pvsm  laplaceSphereError.pvsm  laplaceSphereError_Home.pvsm  laplaceTorusError.pvsm  meanWeinTorus.pvsm  meshEllipsCorr.pvsm  meshNonicForPic.pvsm  torusCurvMean_Home.pvsm  torusDiameter.pvsm  torusDiameterLXError.pvsm
AMDiS_Sandbox2/: CMakeLists.txt  CorrectEnergyCSV.py  dOfInnerTest  deRhamDecompSphere  dirCosPhi  directionDerivationTest  directionDerivationTest2  directorField  directorFieldEllipsoid  directorFieldOctic  directorFieldOcticCurvTest  directorFieldQuartic  directorFieldSphere  directorFieldTorus  ellipsoidLaplaceTest  energySphere  eulerLinearizedUpwind  evalCSV.py  evalEnergyCSV.py  evalNSEnergies.py  evalNSZVals.py  evalNumDefCSV.py  evalTrackerCSV.py  geoPot  gradDivProblemTest  hodgeTest  innerTest  innerTest2  interpolTestSphere  laplaceConvergenceTest  linMapping  movingSurfaceScalar  navierStokes2  navierStokesLinearized  navierStokesLinearizedNullDiff  navierStokesSphere  nonicDefectTests.sh  nonicPressedQueue433X_44X.sh  nonicPressedQueue43X.sh  nonicPressedQueue4X.sh  (+19 more)
AMDiS_Sandbox2/horses/: horse.0.pvd  horse.0Sharp.pvd  horse.1.pvd  horse.1Sharp.pvd  horse10000.0.pvd  horse10000.0Sharp.pvd  horse10000.1.pvd  horse10000.1Sharp.pvd  horse30000.0.pvd  horse30000.0Sharp.pvd  horse30000.1.pvd  horse30000.1Sharp.pvd  horse5000.0.pvd  horse5000.0Sharp.pvd  horse5000.1.pvd  horse5000.1Sharp.pvd  horse50000.0.pvd  horse50000.0Sharp.pvd  horse50000.1.pvd  horse50000.1Sharp.pvd
AMDiS_Sandbox2/init/: NavierStokes.3d  dirField.dat.3d  dirfield.dat.3d  ellipsoid.dat.3d  geoPot.dat.3d  laplaceTest.dat.3d  nonicPressed.dat.3d  nonicPressedTemp.dat.3d  octic.dat.3d  octic.dat.3de  octic2.dat.3d  quartic.dat.3d  sphere.dat.3d  sphereOut3.dat.3d  stokes.dat.3d  test.dat.3d  torus.dat.3d
AMDiS_Sandbox2/nohups/: nonicPressedQueue433X_44X  out5.nohup  out6.nohup  out7.nohup  quequeAll.txt
AMDiS_Sandbox2/nohups_badShape/: quequeAll.txt
AMDiS_Sandbox2/outNonicPressed/: nonic095r025c00875b_2D.0Sharp.pvd  nonic095r025c00875b_2D.1Sharp.pvd  nonic095r025c00875b_4D.0Sharp.pvd  nonic095r025c00875b_4D.1Sharp.pvd  nonic095r05c0175b_2D.0Sharp.pvd  nonic095r05c0175b_2D.1Sharp.pvd  nonic095r05c0175b_4D.0Sharp.pvd  nonic095r05c0175b_4D.1Sharp.pvd  nonic095r075c02625b_2D.0Sharp.pvd  nonic095r075c02625b_2D.1Sharp.pvd  nonic095r075c02625b_4D.0Sharp.pvd  nonic095r075c02625b_4D.1Sharp.pvd  nonic095r0c0b_4D.0Sharp.pvd  nonic095r0c0b_4D.1Sharp.pvd  nonic095r125c04375b_2D.0Sharp.pvd  nonic095r125c04375b_2D.1Sharp.pvd  nonic095r125c04375b_4D.0Sharp.pvd  nonic095r125c04375b_4D.1Sharp.pvd  nonic095r15c0525b_2D.0Sharp.pvd  nonic095r15c0525b_2D.1Sharp.pvd  nonic095r15c0525b_4D.0Sharp.pvd  nonic095r15c0525b_4D.1Sharp.pvd  nonic095r175c06125b_2D.0Sharp.pvd  nonic095r175c06125b_2D.1Sharp.pvd  nonic095r175c06125b_4D.0Sharp.pvd  nonic095r175c06125b_4D.1Sharp.pvd  nonic095r1c035b_2D.0Sharp.pvd  nonic095r1c035b_2D.1Sharp.pvd  nonic095r1c035b_4D.0Sharp.pvd  nonic095r1c035b_4D.1Sharp.pvd  nonic095r2c07b_2D.0Sharp.pvd  nonic095r2c07b_2D.1Sharp.pvd  nonic095r2c07b_4D.0Sharp.pvd  nonic095r2c07b_4D.1Sharp.pvd
AMDiS_Sandbox2/saves/: TorusLocalCoords.pvsm  (+3 more)
sphereLaplaceDEC/: CMakeLists.txt  laplaceDEC
var/: initSet.py  (+5 more)
(+726 files in other folders)
